--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@
             <a href="./res/pages/logisticRegression.html">Logistic Regression</a>
             <a href="./res/pages/decisionTrees.html">Decision Tree</a>
             <a href="./res/pages/ensembleLearning.html">Ensemble Learning</a>
+            <a href="./res/pages/kfolds.html">K Fold Cross Validation</a>
+            <a href="./res/pages/bagging.html">Bagging</a>
+            <a href="./res/pages/boosting.html">Boosting</a>
+            <a href="./res/pages/stumping.html">Stumping</a>
+            <a href="./res/pages/xgboost.html">XGBoost</a>
+            <a href="./res/pages/randomforest.html">Random forest</a>
+            <a href="./res/pages/supportVectorMachine.html">Support Vector Machine</a>
+            <a href="./res/pages/Clustering.html">Clustering</a>
           </div>
         </li>
         <li class="nav-item">
